[gd_scene load_steps=3 format=2]

[ext_resource path="res://Slames/Scene/Actors/RedSlimeLives.gd" type="Script" id=1]
[ext_resource path="res://slame_green_idle_move_dodge__death_sheet.png" type="Texture" id=2]

[node name="RedSlimeLives" type="Node2D"]
position = Vector2( 0, -16 )
script = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 120, 40 )
texture = ExtResource( 2 )
hframes = 10
vframes = 5
frame = 1

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 104, 40 )
texture = ExtResource( 2 )
hframes = 10
vframes = 5
frame = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 88, 40 )
texture = ExtResource( 2 )
hframes = 10
vframes = 5
frame = 1
